# protein

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.env  go.mod  go.sum  go.work
ast/: BUILD.bazel  ast.go  boolean.go  edition.go  enum.go  extension.go  float.go  go.mod  identifier.go  import.go  integer.go  message.go  oneof.go  option.go  package.go  range.go  reserved.go  service.go  string.go  syntax.go  text_message.go
codemap/: BUILD.bazel  codemap.go  filemap.go  go.mod
config/: BUILD.bazel  README.md  generate_source_code_info_false.go  generate_source_code_info_true.go  keep_comments_false.go  keep_comments_true.go
corpus/: a_bit_of_everything.proto  error.proto
examples/bazel/codemap/: BUILD.bazel  README.md  main.go
examples/bazel/config/: BUILD.bazel  README.md  main.go
examples/bazel/lexer/: BUILD.bazel  MODULE.bazel  README.md  main.go
examples/gomod/codemap/: go.mod
examples/gomod/config/: README.md  go.mod
examples/gomod/lexer/: go.mod
internal/: go.mod
internal/bytes/: BUILD.bazel  bytes.go
internal/span/: BUILD.bazel  span.go
lexer/: BUILD.bazel  errors.go  go.mod  impl.go  lexer.go  lexer_test.go  position.go  rune_reader.go  state_fn.go  token.go  token_test.go  tokenized_buffer.go  tokenkind_string.go
linker/: enum.go  errors.go  import.go  import_test.go  linker.go  message.go  multiset.go  opts.go  package.go  service.go
parser/: BUILD.bazel  comment_test.go  constant.go  constant_test.go  edition.go  edition_test.go  enum.go  enum_test.go  error.go  errors.go  extensions.go  extensions_test.go  field.go  go.mod  identifier.go  identifier_test.go  impl.go  import.go  import_test.go  map.go  message.go  message_test.go  nodekind_string.go  oneof.go  oneof_test.go  option.go  option_test.go  package.go  package_test.go  parser.go  parser_import_test.go  parser_package_test.go  parser_syntax_test.go  parser_test.go  range.go  recovery.go  reserved.go  reserved_test.go  rpc.go  service.go  (+12 more)
parser/internal/: BUILD.bazel  test_utils.go
parser/testdata/: .dir-locals.el  a_bit_of_everything.txt  comment.txt  edition.txt  enum.txt  extensions.txt  field.txt  import.txt  map.txt  message.txt  oneof.txt  option.txt  package.txt  reserved.txt  rpc.txt  syntax.txt  text_list.txt  text_message.txt
scripts/: coverage.sh  genhtml.sh  lints.sh
source/: source.go
token/: BUILD.bazel  go.mod  token.go
typecheck/: enum.go  errors.go  import.go  import_test.go  message.go  multiset.go  multiset_test.go  opts.go  package.go  package_test.go  service.go  typecheck.go  typecheck_test.go
