load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ast",
    srcs = [
        "ast.go",
        "edition.go",
        "identifier.go",
        "import.go",
        "package.go",
        "string.go",
        "syntax.go",
    ],
    importpath = "github.com/Clement-Jean/protein/ast",
    visibility = ["//visibility:public"],
    deps = ["//token"],
)
