load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ast",
    srcs = [
        "ast.go",
        "boolean.go",
        "edition.go",
        "enum.go",
        "extension.go",
        "float.go",
        "identifier.go",
        "import.go",
        "integer.go",
        "message.go",
        "oneof.go",
        "option.go",
        "package.go",
        "range.go",
        "reserved.go",
        "service.go",
        "string.go",
        "syntax.go",
        "text_message.go",
    ],
    importpath = "github.com/Clement-Jean/protein/ast",
    visibility = ["//visibility:public"],
    deps = ["//token"],
)
