load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lexer",
    srcs = [
        "impl.go",
        "lexer.go",
        "state_fn.go",
    ],
    importpath = "github.com/Clement-Jean/protein/lexer",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//internal/span",
        "//token",
    ],
)

go_test(
    name = "lexer_test",
    srcs = ["lexer_test.go"],
    gotags = [
        "protein_keep_comments",
        "protein_generate_source_code_info",
    ],
    deps = [
        ":lexer",
        "//internal/bytes",
        "//internal/span",
        "//token",
    ],
)
