load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = [
        "constant.go",
        "edition.go",
        "error.go",
        "impl.go",
        "parser.go",
        "syntax.go",
    ],
    importpath = "github.com/Clement-Jean/protein/parser",
    visibility = ["//visibility:public"],
    deps = [
        "//ast",
        "//codemap",
        "//internal/bytes",
        "//token",
    ],
)

go_test(
    name = "parser_test",
    srcs = [
        "edition_test.go",
        "parser_test.go",
        "syntax_test.go",
    ],
    embed = [":parser"],
    deps = [
        "//ast",
        "//codemap",
        "//internal/bytes",
        "//internal/span",
        "//parser/internal",
        "//token",
    ],
)
