load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = [
        "constant.go",
        "edition.go",
        "error.go",
        "impl.go",
        "import.go",
        "option.go",
        "package.go",
        "parser.go",
        "reserved.go",
        "syntax.go",
    ],
    importpath = "github.com/Clement-Jean/protein/parser",
    visibility = ["//visibility:public"],
    deps = [
        "//ast",
        "//codemap",
        "//config",
        "//internal/bytes",
        "//token",
    ],
)

go_test(
    name = "parser_test",
    srcs = [
        "constant_test.go",
        "edition_test.go",
        "identifier_test.go",
        "import_test.go",
        "option_test.go",
        "package_test.go",
        "parser_test.go",
        "syntax_test.go",
    ],
    embed = [":parser"],
    gotags = [
        "protein_keep_comments",
        "protein_generate_source_code_info",
    ],
    deps = [
        "//ast",
        "//codemap",
        "//internal/bytes",
        "//internal/span",
        "//parser/internal",
        "//token",
    ],
)
