load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "codemap_example_lib",
    srcs = ["main.go"],
    importpath = "github.com/Clement-Jean/protein/examples/codemap",
    visibility = ["//visibility:private"],
    deps = [
        "@protein//codemap",
        "@protein//lexer",
    ],
)

go_binary(
    name = "codemap_example",
    embed = [":codemap_example_lib"],
    visibility = ["//visibility:public"],
)
